--- a/Pic-a-Pix/App.config
+++ b/Pic-a-Pix/App.config
@@ -5,7 +5,7 @@
   </configSections>
   <ColorConfigurationSection>
     <DefaultColor color="Black" hintCharacter="B" colorCode="000000"/>
-    <Blank color="Blank" hintCharacter="W" colorCode="123456"/>
+    <Blank color="Blank" hintCharacter="W" colorCode="FF0000"/>
     <colors>
       <add color="Black" hintCharacter="B" colorCode="000000"/>
     </colors>
