--- a/Pic-a-Pix/App.config
+++ b/Pic-a-Pix/App.config
@@ -4,10 +4,12 @@
     <section name="ColorConfigurationSection" type="Pic_a_Pix.CustomConfig.ColorConfigurationSection, Pic-a-Pix"/>
   </configSections>
   <ColorConfigurationSection>
-    <DefaultColor color="Black" hintCharacter="B" colorCode="000000"/>
-    <Blank color="Blank" hintCharacter="W" colorCode="FF0000"/>
+    <DefaultColor color="Black" hintCharacter="" colorCode="000000"/>
+    <Blank color="Blank" hintCharacter="W" colorCode="00FF00"/>
     <colors>
-      <add color="Black" hintCharacter="B" colorCode="000000"/>
+      <add color="Black" hintCharacter="" colorCode="000000"/>
+      <add color="Red" hintCharacter="R" colorCode="FF0000"/>
+      <add color="Blue" hintCharacter="B" colorCode="0000FF"/>
     </colors>
   </ColorConfigurationSection>
 </configuration>
