--- a/Pic-a-Pix/App.config
+++ b/Pic-a-Pix/App.config
@@ -5,11 +5,14 @@
   </configSections>
   <ColorConfigurationSection>
     <DefaultColor color="Black" hintCharacter="" colorCode="000000"/>
-    <Blank color="Blank" hintCharacter="W" colorCode="00FF00"/>
+    <Blank color="Blank" hintCharacter="W" colorCode="FFFFFF"/>
     <colors>
       <add color="Black" hintCharacter="" colorCode="000000"/>
       <add color="Red" hintCharacter="R" colorCode="FF0000"/>
       <add color="Blue" hintCharacter="B" colorCode="0000FF"/>
+      <add color="Brown" hintCharacter="C" colorCode="EF9A50"/>
+      <add color="Green" hintCharacter="G" colorCode="00FF00"/>
+      <add color="Dark Brown" hintCharacter="D" colorCode="A06700"/>
     </colors>
   </ColorConfigurationSection>
 </configuration>
